log.txt
mainwindow.cpp:63 :选择的文件夹是:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example
mainwindow.cpp:69 :遍历文件夹:
mainwindow.cpp:96 :文件夹:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example
mainwindow.cpp:98 :aa.c
mainwindow.cpp:98 :aa.h
mainwindow.cpp:98 :example.c
mainwindow.cpp:119 :添加文件:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.c
mainwindow.cpp:119 :添加文件:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.h
mainwindow.cpp:119 :添加文件:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/example.c
AstParser.cpp:36 :D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h:7:12: error: unknown type name 'cc'
void hello(cc);
           ^
D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h:15:6: error: expected identifier
  ce,,
     ^
In file included from D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c:2:
D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example/aa.h:7:12: error: a parameter list without types is only allowed in a function definition
void hello(cc);
           ^
D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example/aa.h:15:6: error: expected identifier
  ce,,
     ^

AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\aa.h
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c
AstParser.cpp:92 :向map中添加文件:D:\CodeProjects\ClionProjects\CodeAnalysis\cmake-build-debug\example\example.c
mainwindow.cpp:137 :单击左侧目录树:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.h
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.h
AstParser.cpp:136 :变量名:ca,类型:EnumConstant
AstParser.cpp:136 :变量名:cb,类型:EnumConstant
AstParser.cpp:136 :变量名:cc,类型:EnumConstant
AstParser.cpp:136 :变量名:cd,类型:EnumConstant
AstParser.cpp:136 :变量名:ce,类型:EnumConstant
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:248 :添加到根:cc,类型:
mainwindow.cpp:251 :变量添加叶:ca,类型
mainwindow.cpp:251 :变量添加叶:cb,类型
mainwindow.cpp:251 :变量添加叶:cc,类型
mainwindow.cpp:251 :变量添加叶:cd,类型
mainwindow.cpp:251 :变量添加叶:ce,类型
mainwindow.cpp:248 :添加到根:tttasx,类型:float
mainwindow.cpp:248 :添加到根:s_a,类型:
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.h
AstParser.cpp:136 :变量名:ca,类型:EnumConstant
AstParser.cpp:136 :变量名:cb,类型:EnumConstant
AstParser.cpp:136 :变量名:cc,类型:EnumConstant
AstParser.cpp:136 :变量名:cd,类型:EnumConstant
AstParser.cpp:136 :变量名:ce,类型:EnumConstant
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:248 :添加到根:cc,类型:
mainwindow.cpp:251 :变量添加叶:ca,类型
mainwindow.cpp:251 :变量添加叶:cb,类型
mainwindow.cpp:251 :变量添加叶:cc,类型
mainwindow.cpp:251 :变量添加叶:cd,类型
mainwindow.cpp:251 :变量添加叶:ce,类型
mainwindow.cpp:248 :添加到根:tttasx,类型:float
mainwindow.cpp:248 :添加到根:s_a,类型:
mainwindow.cpp:137 :单击左侧目录树:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/example.c
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/example.c
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/example.c
AstParser.cpp:136 :变量名:ea,类型:EnumConstant
AstParser.cpp:136 :变量名:eb,类型:EnumConstant
AstParser.cpp:136 :变量名:ec,类型:EnumConstant
AstParser.cpp:136 :变量名:ed,类型:EnumConstant
AstParser.cpp:136 :变量名:ee,类型:EnumConstant
AstParser.cpp:125 :变量名:a,类型:Field
AstParser.cpp:125 :变量名:b,类型:Field
AstParser.cpp:125 :变量名:ab,类型:Field
AstParser.cpp:125 :变量名:bc,类型:Field
AstParser.cpp:114 :变量:xzz,类型:Var
AstParser.cpp:114 :变量:c,类型:Var
AstParser.cpp:114 :变量:examplex,类型:Var
mainwindow.cpp:248 :添加到根:,类型:
mainwindow.cpp:251 :变量添加叶:ea,类型
mainwindow.cpp:251 :变量添加叶:eb,类型
mainwindow.cpp:251 :变量添加叶:ec,类型
mainwindow.cpp:251 :变量添加叶:ed,类型
mainwindow.cpp:251 :变量添加叶:ee,类型
mainwindow.cpp:248 :添加到根:dalss,类型:int
mainwindow.cpp:248 :添加到根:x,类型:Record
mainwindow.cpp:251 :变量添加叶:a,类型Record
mainwindow.cpp:251 :变量添加叶:b,类型Record
mainwindow.cpp:248 :添加到根:y,类型:Record
mainwindow.cpp:251 :变量添加叶:ab,类型Record
mainwindow.cpp:251 :变量添加叶:bc,类型Record
mainwindow.cpp:248 :添加到根:main,类型:int
mainwindow.cpp:251 :变量添加叶:xzz,类型int
mainwindow.cpp:251 :变量添加叶:c,类型int
mainwindow.cpp:251 :变量添加叶:examplex,类型int
AstParser.cpp:136 :变量名:ea,类型:EnumConstant
AstParser.cpp:136 :变量名:eb,类型:EnumConstant
AstParser.cpp:136 :变量名:ec,类型:EnumConstant
AstParser.cpp:136 :变量名:ed,类型:EnumConstant
AstParser.cpp:136 :变量名:ee,类型:EnumConstant
AstParser.cpp:125 :变量名:a,类型:Field
AstParser.cpp:125 :变量名:b,类型:Field
AstParser.cpp:125 :变量名:ab,类型:Field
AstParser.cpp:125 :变量名:bc,类型:Field
AstParser.cpp:114 :变量:xzz,类型:Var
AstParser.cpp:114 :变量:c,类型:Var
AstParser.cpp:114 :变量:examplex,类型:Var
mainwindow.cpp:248 :添加到根:,类型:
mainwindow.cpp:251 :变量添加叶:ea,类型
mainwindow.cpp:251 :变量添加叶:eb,类型
mainwindow.cpp:251 :变量添加叶:ec,类型
mainwindow.cpp:251 :变量添加叶:ed,类型
mainwindow.cpp:251 :变量添加叶:ee,类型
mainwindow.cpp:248 :添加到根:dalss,类型:int
mainwindow.cpp:248 :添加到根:x,类型:Record
mainwindow.cpp:251 :变量添加叶:a,类型Record
mainwindow.cpp:251 :变量添加叶:b,类型Record
mainwindow.cpp:248 :添加到根:y,类型:Record
mainwindow.cpp:251 :变量添加叶:ab,类型Record
mainwindow.cpp:251 :变量添加叶:bc,类型Record
mainwindow.cpp:248 :添加到根:main,类型:int
mainwindow.cpp:251 :变量添加叶:xzz,类型int
mainwindow.cpp:251 :变量添加叶:c,类型int
mainwindow.cpp:251 :变量添加叶:examplex,类型int
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.h
AstParser.cpp:136 :变量名:ca,类型:EnumConstant
AstParser.cpp:136 :变量名:cb,类型:EnumConstant
AstParser.cpp:136 :变量名:cc,类型:EnumConstant
AstParser.cpp:136 :变量名:cd,类型:EnumConstant
AstParser.cpp:136 :变量名:ce,类型:EnumConstant
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:248 :添加到根:cc,类型:
mainwindow.cpp:251 :变量添加叶:ca,类型
mainwindow.cpp:251 :变量添加叶:cb,类型
mainwindow.cpp:251 :变量添加叶:cc,类型
mainwindow.cpp:251 :变量添加叶:cd,类型
mainwindow.cpp:251 :变量添加叶:ce,类型
mainwindow.cpp:248 :添加到根:tttasx,类型:float
mainwindow.cpp:248 :添加到根:s_a,类型:
mainwindow.cpp:137 :单击左侧目录树:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.c
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.c
mainwindow.cpp:46 :点击tab_bar的绝对路径:D:/CodeProjects/ClionProjects/CodeAnalysis/cmake-build-debug/example/aa.c
AstParser.cpp:114 :变量:i,类型:Var
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:248 :添加到根:cc,类型:int
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:251 :变量添加叶:i,类型void
AstParser.cpp:114 :变量:i,类型:Var
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:248 :添加到根:cc,类型:int
mainwindow.cpp:248 :添加到根:hello,类型:void
mainwindow.cpp:251 :变量添加叶:i,类型void
